prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/only_single_variable_declaration.nut
// EXPECT_ERROR: "Only single variable declaration is allowed here"
if (local a = 1, b = 2) {}
